# Bachelor-thesis

./: README.md
Articles_BIGD/: 1_Recept_COCONUT.docx
simpleIndex/: CMakeLists.txt  Makefile  indx
simpleIndex/include/: EnvelopGen.h  binarySearchTree.h  breakpoints.h  iSax.h  mysql.h  onebar.h  symbol.h  syntheticData.h
simpleIndex/src/: EnvelopGen.cpp  binarySearchTree.cpp  breakpoints.cpp  iSax.cpp  main.C  mysql.C  onebar.C  symbol.C  syntheticData.cpp
